2007-05-19  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task-manager.c: (_task_manager_drag_data_recieved),
	(awn_task_manger_refresh_launchers), (awn_task_manager_init):
	* src/awn-task.c: (awn_task_get_item):
	* src/awn-task.h:
	Changing the position or launchers in the gconf menu will
	automatically update the positions of the launchers in Awn.

2007-05-19  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-bar.c: (glass_engine), (render):
	* src/awn-title.c: (render):
	Merged patch by Andrea Cimitan which fixes some cairo drawing.

2007-05-19  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-window.c: (awn_window_new):
	Merged patch by Ado Papas whihc should fix the issues when the window
	manager ignores Awn's requests to activate windows etc.

2007-05-13  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-gconf.c: (awn_gconf_new):
	* src/awn-task.c: (_task_choose_custom_icon),
	(on_change_icon_clicked), (_task_show_prefs):
	* src/awn-x.c: (awn_x_get_icon_for_window):
	Brand new custom icon interface which actually works :).

2007-05-12  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task-manager.c: (awn_task_manager_set_task_icon_by_xid),
	(awn_task_manager_unset_task_icon_by_xid),
	(awn_task_manager_set_progress_by_xid),
	(awn_task_manager_set_info_by_xid),
	(awn_task_manager_unset_info_by_xid):
	* src/awn-x.c: (awn_x_get_icon):
	* src/inlinepixbufs.h:
	Use own own default icons for windows without icon.

2007-05-12  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task-manager.c:
	(awn_task_manager_add_task_menu_item_by_name),
	(awn_task_manager_add_task_check_item_by_name):
	* src/awn-task.c: (awn_task_button_press), (activate_window),
	(awn_task_add_menu_item), (awn_task_add_check_item),
	(awn_task_set_check_item):
	Merged patch by Ado Paps which tells wnck to raise the transient
	window rather than the main window when activating.

	* src/awn-task.h:
	* src/awn-utils.c: (_move_bar):
	(All)Merged a warnings patch by Gerd Kohlberger
